--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "install_packages": "cd backend && npm i && cd .. && npm i",
     "dev": "concurrently \"npm --prefix ./backend run dev\" \"vite\"",
     "build": "vite build",
     "preview": "vite preview"
